bpo-32388: Remove cross-version binary compatibility requirement in tp_flags